syntax = "proto3";
package nftvault.nftvault;

import "gogoproto/gogo.proto";
import "nftvault/nftvault/params.proto";
import "nftvault/nftvault/allowed_channel.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "nftvault/x/nftvault/types";

// GenesisState defines the nftvault module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  string port_id = 2;
  repeated AllowedChannel allowedChannelList = 3 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
